# matrix_clock

./: .gitignore  .gitmodules  README.md  README_dotstar_8x8.md
case/: matrix_clock_assembled_board.scad  matrix_clock_case.scad
case/3mf/: base.3mf  button_peg_backing.3mf  top_cover.3mf
case/dotstar_8x8/: matrix_clock_case.scad
case/dotstar_8x8/3mf/: button_peg_shaft.3mf  prusa_slicer_project.3mf
case/dotstar_8x8/lib/: matrix_clock_kicad_pcb.step  matrix_clock_kicad_pcb.stl
case/led_matrix_32x64/: led_matrix_32x64.scad
case/led_matrix_32x64/dep/: button_pcb.scad  button_pcb_kicad.stl  main_pcb.scad
case/led_matrix_32x64/export/: bottom_support.3mf  top_support.3mf
case/led_matrix_64x32/: led_matrix_64x32.scad
case/led_matrix_64x32/dep/: button_pcb.scad  main_pcb.scad  main_pcb.stl
case/lib/: matrix_clock_assembled_board.scad
firmware/: matrix_clock_dotstar_8x8.uf2  matrix_clock_led_64x32.uf2
schematic/button_pcb_kicad/: button_pcb_kicad.kicad_pcb  button_pcb_kicad.kicad_prl  button_pcb_kicad.kicad_pro  button_pcb_kicad.kicad_sch  fp-info-cache
schematic/button_pcb_kicad/flatcam/: Project_20230128_192544.FlatPrj  button_pcb_kicad-Edge_Cuts.gbr_cutout_cnc.nc  button_pcb_kicad-F_Cu.gbr_iso_combined_cnc.nc  button_pcb_kicad-NPTH.drl_cnc.nc  button_pcb_kicad-PTH.drl_cnc.nc  test.nc
schematic/button_pcb_kicad/gerber/: button_pcb_kicad-Edge_Cuts.gbr  button_pcb_kicad-F_Cu.gbr  button_pcb_kicad-NPTH.drl  button_pcb_kicad-PTH.drl  button_pcb_kicad-job.gbrjob
schematic/dotstar_8x8_kicad/: fp-info-cache
schematic/dotstar_8x8_kicad/export/: matrix_clock_kicad-NPTH.drl
schematic/dotstar_8x8_kicad/flatcam/: matrix_clock_kicad-B_Cu.gbr_iso_combined_cnc.nc  matrix_clock_kicad-PTH.small_drill.nc  test.nc
schematic/led_matrix_32x64_kicad/: fp-info-cache  led_matrix_32x64_kicad.kicad_pcb  led_matrix_32x64_kicad.kicad_prl  led_matrix_32x64_kicad.kicad_pro  led_matrix_32x64_kicad.kicad_sch  led_matrix_32x64_kicad.net
schematic/led_matrix_32x64_kicad/flatcam/: Project_20230127_103059.FlatPrj  led_matrix_32x64_kicad-F_Paste.nc
schematic/led_matrix_32x64_kicad/gerber/: led_matrix_32x64_kicad-F_Mask.gbr  led_matrix_32x64_kicad-F_Paste.gbr  led_matrix_32x64_kicad-job.gbrjob
schematic/led_matrix_64x32_kicad/: led_matrix_64x32_kicad.kicad_pcb  led_matrix_64x32_kicad.kicad_prl  led_matrix_64x32_kicad.kicad_pro  led_matrix_64x32_kicad.kicad_sch  led_matrix_64x32_kicad.net
schematic/led_matrix_64x32_kicad/flatcam/: led_matrix_64x32_kicad-F_Paste.nc
schematic/led_matrix_64x32_kicad/gerber/: led_matrix_64x32_kicad-F_Mask.gbr  led_matrix_64x32_kicad-F_Paste.gbr  led_matrix_64x32_kicad-job.gbrjob
schematic/matrix_clock_kicad/: matrix_clock_kicad.kicad_pcb  matrix_clock_kicad.kicad_prl  matrix_clock_kicad.kicad_pro  matrix_clock_kicad.kicad_sch  matrix_clock_kicad.net
schematic/matrix_clock_kicad/export/: matrix_clock_kicad-B_Cu.gbr  matrix_clock_kicad-Edge_Cuts.gbr  matrix_clock_kicad-PTH.drl  matrix_clock_kicad-job.gbrjob
src/: CMakeLists.txt  bootstrap.sh  buttons.c  buttons.h  clock.c  clock.h  clock_pico_internal.c  clock_render.c  clock_render.h  clock_settings.c  clock_settings.h  colors.c  colors.h  debounce.c  debounce.h  debug.c  debug.h  led_matrix.h  led_matrix_32x64.c  led_matrix_64x32.c  led_matrix_dotstar.c  logging.h  main.c  monitor.c  monitor.h  number_draw.c  number_draw.h  set_time.c  set_time.h  set_time_high_res.c  set_time_high_res.h  set_time_low_res.c  set_time_low_res.h
src/render/: blank.c  blank.h  bounce.c  bounce.h  distances.inc  drops.c  drops.h  fade.c  fade.h  glow.c  glow.h  guide.c  guide.h  matrix.c  matrix.h  matrix_with_numbers.c  matrix_with_numbers.h  number_cascade.c  number_cascade.h  number_cascade_hires.c  number_cascade_hires.h  number_grid.c  number_grid.h  numbers.c  numbers.h  simple.c  simple.h  waveform.c  waveform.h
src/tools/: distance_generator.py
tools/: distance_generator.py
(+11 files in other folders)
